aligning issues fixed

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  width: 100vw;
   display: flex;
   justify-content: center;
 }
